# proof-of-alpha

./: .env.example  .gitignore  DEMO.md  README.md  pyproject.toml
backtest/: engine.py  metrics.py
bnbagent_demo/: README.md  erc8183_provider.py  last_job.json
data/: trial_ledger.json  universe.json  universe_eligible.txt
data_layer/: binance_client.py  cmc_client.py  panel.py  store.py  universe.py
demo/: run_demo.py
demo/output/: SUMMARY.md  demo_ledger.json  fng_regime_momentum_best_returns.csv  fng_regime_momentum_best_spec.json  fng_regime_momentum_report.json  fng_regime_momentum_report.md  funding_carry_best_returns.csv  funding_carry_best_spec.json  funding_carry_report.json  funding_carry_report.md  funding_regime_switch_best_returns.csv  funding_regime_switch_best_spec.json  funding_regime_switch_report.json  funding_regime_switch_report.md  momentum_rsi_macd_fng_best_returns.csv  momentum_rsi_macd_fng_best_spec.json  momentum_rsi_macd_fng_report.json  momentum_rsi_macd_fng_report.md  overfit_bait_best_returns.csv  overfit_bait_best_spec.json  overfit_bait_report.json  overfit_bait_report.md  regime_context.json  sentiment_divergence_best_returns.csv  (+11 more)
docs/: cmc-data-lineage.md  spec-format.md
scripts/: fetch_history.py  register_agent.py
skill/: SKILL.md  manifest.json
strategies/: families.py  spec.py
tests/: test_backtest_engine.py  test_crypto_annualization.py  test_data_layer.py  test_families.py  test_gate.py  test_spec.py  test_validation_alt.py  test_validation_core.py
validation/: alt.py  core.py  gate.py  report_md.py
(+3 files in other folders)
